java 11 and all other versions bumped