@@ -1,20 +1,21 @@
+//val kotlinVersion by extra("1.3.50")
 plugins {
     application
-    kotlin("jvm") version "1.3.40"
-    id("com.google.cloud.tools.jib") version "1.0.0"
+    kotlin("jvm") version "1.3.50"
+    id("com.google.cloud.tools.jib") version "1.6.1"
 }
 
 group = "ktor01"
 version = "1.0-SNAPSHOT"
 
 
-val ktor_version by extra("1.1.2")
-val logback_version by extra("1.2.3")
+val ktorVersion by extra("1.2.4")
+val logbackVersion by extra("1.2.3")
 
-val main_class by extra("io.ktor.server.netty.EngineMain")
+val mainClass by extra("io.ktor.server.netty.EngineMain")
 
 application {
-    mainClassName = main_class
+    mainClassName = mainClass
 
     applicationDefaultJvmArgs = listOf(
             "-server",
@@ -26,38 +27,47 @@ application {
     )
 }
 
-java.sourceCompatibility = JavaVersion.VERSION_1_8
+java.sourceCompatibility = JavaVersion.VERSION_11
+//java.targetCompatibility = JavaVersion.VERSION_11
 
 dependencies {
     implementation(kotlin("stdlib"))
+    //implementation(kotlin("stdlib-jdk11", "1.3.50"))
+    //compile("org.jetbrains.kotlin:kotlin-stdlib:1.3.50")
 
-    implementation("ch.qos.logback:logback-classic:$logback_version")
+    implementation("ch.qos.logback:logback-classic:$logbackVersion")
 
-    implementation("io.ktor:ktor-server-core:$ktor_version")
-    implementation("io.ktor:ktor-server-netty:$ktor_version")
-    implementation("io.ktor:ktor-metrics:$ktor_version")
-    implementation("io.ktor:ktor-html-builder:$ktor_version")
-    testCompile ("io.ktor:ktor-server-test-host:$ktor_version")
+    implementation("io.ktor:ktor-server-core:$ktorVersion")
+    implementation("io.ktor:ktor-server-netty:$ktorVersion")
+    implementation("io.ktor:ktor-metrics:$ktorVersion")
+    implementation("io.ktor:ktor-html-builder:$ktorVersion")
+    testCompile ("io.ktor:ktor-server-test-host:$ktorVersion")
 }
 
 jib {
+/*
+    from {
+        image = "openjdk:11"
+    }
+*/
     container {
         ports = listOf("8080")
-        mainClass = main_class
+        mainClass = this@Build_gradle.mainClass
 
-        // good defauls intended for Java 8 containers
-        jvmFlags = listOf(
+/*        jvmFlags = listOf(
                 "-server",
                 "-Djava.awt.headless=true",
+                "-Dio.netty.tryReflectionSetAccessible=false",
+                //"--add-opens java.base/jdk.internal.misc=ALL-UNNAMED",
                 "-XX:+UnlockExperimentalVMOptions",
-                "-XX:+UseCGroupMemoryLimitForHeap",
-                "-XX:InitialRAMFraction=2",
-                "-XX:MinRAMFraction=2",
-                "-XX:MaxRAMFraction=2",
+                //"-XX:+UseCGroupMemoryLimitForHeap",
+                //"-XX:InitialRAMFraction=2",
+                //"-XX:MinRAMFraction=2",
+                //"-XX:MaxRAMFraction=2",
                 "-XX:+UseG1GC",
                 "-XX:MaxGCPauseMillis=100",
                 "-XX:+UseStringDeduplication"
-        )
+        )*/
     }
 }
 
